# AnalysisTree

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  README.md  annotated.html  classes.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_4f73a7857194388233d535e0cfab7fcd.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.dot  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.dot  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.dot  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.dot  inherit_graph_12.map  inherit_graph_12.md5  inherit_graph_13.dot  inherit_graph_13.map  inherit_graph_13.md5  (+83 more)
.github/workflows/: clang.yml  cmake.yml  main.yml
cmake/: AnalysisTreeConfig.cmake.in  AnalysisTreeConfig.sh.in  AnalysisTreeHashWriter.sh  AnalysisTreeVersion.hpp.in  CMakeLists-GTest.txt.in  MunkeiVersionFromGit.cmake  TestsSetup.cmake
core/: AnalysisTreeCoreLinkDef.h  BranchConfig.cpp  BranchConfig.hpp  BranchConfig.test.cpp  BranchConfig.test.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Configuration.test.cpp  Configuration.test.hpp  Constants.hpp  Container.cpp  Container.hpp  Container.test.cpp  Container.test.hpp  DataHeader.cpp  DataHeader.hpp  DataHeader.test.cpp  DataHeader.test.hpp  Detector.cpp  Detector.hpp  Detector.test.cpp  Detector.test.hpp  EventHeader.cpp  EventHeader.hpp  EventHeader.test.cpp  Hit.cpp  Hit.hpp  Hit.test.hpp  IndexedObject.cpp  IndexedObject.hpp  IndexedObject.test.cpp  IndexedObject.test.hpp  Matching.cpp  Matching.hpp  Matching.test.cpp  Matching.test.hpp  Module.cpp  Module.hpp  Module.test.cpp  (+11 more)
d0/d03/: classAnalysisTree_1_1Configuration__v3__coll__graph.map  classAnalysisTree_1_1Configuration__v3__coll__graph.md5
d0/d04/: classUserTaskWrite__coll__graph.map  classUserTaskWrite__coll__graph.md5
d0/d12/: classAnalysisTree_1_1BranchReader-members.html  structAnalysisTree_1_1new__channel__struct.html
d0/d25/: classAnalysisTree_1_1BranchViewAction_1_1BranchViewFilterAction__inherit__graph.map  classAnalysisTree_1_1BranchViewAction_1_1BranchViewFilterAction__inherit__graph.md5
d0/d27/: classUserTaskWrite.html
d0/d29/: classAnalysisTree_1_1BranchViewAction_1_1BranchViewDefineAction__coll__graph.dot  classAnalysisTree_1_1BranchViewAction_1_1BranchViewDefineAction__coll__graph.map  classAnalysisTree_1_1BranchViewAction_1_1BranchViewDefineAction__coll__graph.md5
d0/d35/: classAnalysisTree_1_1IAction__coll__graph.dot  classAnalysisTree_1_1IAction__coll__graph.map  classAnalysisTree_1_1IAction__coll__graph.md5
d0/d40/: classAnalysisTree_1_1AnalysisTask.html
d0/d41/: classAnalysisTree_1_1PlainTreeFiller.html
d0/d48/: classAnalysisTree_1_1BranchViewAction_1_1RenameFieldsAction__inherit__graph.map  classAnalysisTree_1_1BranchViewAction_1_1RenameFieldsAction__inherit__graph.md5
d0/d4c/: classAnalysisTree_1_1Chain__inherit__graph.dot  classAnalysisTree_1_1Chain__inherit__graph.map  classAnalysisTree_1_1Chain__inherit__graph.md5
d0/d55/: classAnalysisTree_1_1PlainTreeFiller__inherit__graph.dot  classAnalysisTree_1_1PlainTreeFiller__inherit__graph.map  classAnalysisTree_1_1PlainTreeFiller__inherit__graph.md5
d0/d57/: structAnalysisTree_1_1apply__cut__2__branches-members.html
d0/d66/: classAnalysisTree_1_1Branch__coll__graph.map  classAnalysisTree_1_1Branch__coll__graph.md5
d0/d6f/: structAnalysisTree_1_1clear__channels__struct-members.html
d0/d78/: classAnalysisTree_1_1MatchingConfig.html
d0/d80/: structAnalysisTree_1_1copy__content__struct-members.html
d0/d8a/: structAnalysisTree_1_1set__branch__address__struct__inherit__graph.map  (+1 more)
d0/d8f/: VariantMagic_8hpp_source.html
docs/: Doxyfile.in
examples/: AnalysisTreeUserLinkDef.h  CMakeLists.txt  README.md  ReadingMacro.C  UserTaskRead.cpp  UserTaskRead.hpp  UserTaskWrite.cpp  UserTaskWrite.hpp  WritingMacro.C  example.cpp  rootlogon.C  run_read_task.cpp  run_write_task.cpp  test.cpp
infra/: AnalysisEntry.cpp  AnalysisEntry.hpp  AnalysisTask.cpp  AnalysisTask.hpp  AnalysisTask.test.cpp  AnalysisTask.test.hpp  AnalysisTreeInfraLinkDef.h  AnalysisTreeRDF.hpp  AnalysisTreeRDF.test.cpp  Branch.cpp  Branch.hpp  Branch.test.cpp  BranchChannel.cpp  BranchChannel.hpp  BranchHashHelper.hpp  BranchReader.cpp  BranchReader.hpp  BranchView.cpp  BranchView.hpp  BranchView.test.cpp  BranchView.test.hpp  BranchViewAction.cpp  BranchViewAction.hpp  CMakeLists.txt  Chain.cpp  Chain.hpp  Chain.test.hpp  ChainDrawHelper.cpp  ChainDrawHelper.hpp  Cuts.cpp  Cuts.hpp  Cuts.test.cpp  Cuts.test.hpp  Field.cpp  Field.hpp  Field.test.cpp  Field.test.hpp  FillTask.cpp  FillTask.hpp  GenericContainerFiller.cpp  (+36 more)
infra-1.0/: AnalysisTreeInfraLinkDef.h  BranchReader.cpp  BranchReader.hpp  BranchView.cpp  BranchView.hpp  BranchView.test.cpp  CMakeLists.txt  Cuts.cpp  Cuts.hpp  Cuts.test.cpp  Field.cpp  Field.hpp  Field.test.cpp  FillTask.cpp  FillTask.hpp  PlainTreeFiller.cpp  PlainTreeFiller.hpp  PlainTreeFiller.test.cpp  SimpleCut.cpp  SimpleCut.hpp  SimpleCut.test.cpp  TaskManager.cpp  TaskManager.hpp  TreeReader.cpp  TreeReader.hpp  Utils.hpp  VarManager.cpp  VarManager.hpp  VarManager.test.cpp  VarManagerEntry.cpp  VarManagerEntry.hpp  Variable.cpp  Variable.hpp  Variable.test.cpp  VariantMagic.hpp
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+20 more)
test/: CMakeLists.txt  fl.txt  test_runner.cpp  test_runner.cxx
(+438 files in other folders)
